Issue: #FT-3490 SubTicket: #FT-4052 Component: Changes: 1.Fix Bug-Billing-InvoiceInformation: two columns are overlapped

--- a/TripfinderWeb/TripfinderWeb/Global/Css/grid.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/grid.less
@@ -1656,7 +1656,6 @@
 	}
 
 	table {
-		width: 0;
 		margin-bottom: 0;
 	}
 
@@ -2202,7 +2201,6 @@
 
 .kendo-grid {
 	table {
-		width: 0;
 		margin-bottom: 0;
 	}
 
